objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Contact.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Contact.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>Text(Contact.Account.Account_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advertising_Agency__c</fullName>
        <formula>Contact.Account.Advertising_Agency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advertising Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Awarded_RFPs__c</fullName>
        <formula>text(Contact.Account.ofTotalAwardedRFP__c)</formula>
        <label>Awarded RFPs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Awarded_Value__c</fullName>
        <formula>Contact.Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awarded $ Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <formula>Contact.Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <formula>Contact.Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <formula>Contact.Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <formula>Contact.Account.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip__c</fullName>
        <formula>Contact.Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSN_Contact_Source__c</fullName>
        <label>CSN Contact Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSN_ID__c</fullName>
        <formula>Contact.Account.CSN_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSN ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSN_Listing_Type__c</fullName>
        <formula>Contact.Account.CSN_Listing_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSN Listing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chain_Affiliation_del__c</fullName>
        <formula>Contact.Account.Chain_Affiliation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chain Affiliation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <formula>Contact.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Sales_Reps__c</fullName>
        <label>Event Rep</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <label>Event Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <formula>Contact.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>Contact.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lanyon_Migrated_ID__c</fullName>
        <externalId>true</externalId>
        <label>Lanyon Migrated ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Management_Company_del__c</fullName>
        <formula>Contact.Account.Management_Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Management Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Rooms_A__c</fullName>
        <formula>Text(Contact.Account.Meeting_Rooms_Actual__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Rooms (A)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Rooms__c</fullName>
        <formula>Text(Contact.Account.Meeting_Rooms__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Rooms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Associated_Date_Time__c</fullName>
        <label>Member Associated Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Metro_Area__c</fullName>
        <formula>Text(Contact.Account.MetroArea__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metro Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mktg_Exclude_From_Promos__c</fullName>
        <formula>LEFT(IF(INCLUDES( Contact.Opted_Out__c ,"Event"), "Event;", "") &amp; 
IF(INCLUDES(Contact.Opted_Out__c ,"Survey"), "Survey;", "") &amp; 
IF(INCLUDES(Contact.Opted_Out__c ,"CSN"), "CSN;", "") &amp; 
IF(INCLUDES(Contact.Opted_Out__c ,"CrowdTorch"), "CrowdTorch;", "") &amp; 
IF(INCLUDES(Contact.Opted_Out__c ,"CrowdCompass"), "CrowdCompass;", "") &amp; 
IF(INCLUDES(Contact.Opted_Out__c ,"Org Opt-out"), "Org Opt-out;", "") &amp; 
IF(INCLUDES(Contact.Opted_Out__c ,"No Longer There"), "No Longer There;", "") &amp; 
IF(INCLUDES(Contact.Opted_Out__c ,"ReFlagged-No Longer There"), "ReFlagged-No Longer There;", ""),


LEN(IF(INCLUDES( Contact.Opted_Out__c ,"Event"), "Event;", "") &amp; 
IF(INCLUDES(Contact.Opted_Out__c ,"Survey"), "Survey;", "") &amp; 
IF(INCLUDES(Contact.Opted_Out__c ,"CSN"), "CSN;", "") &amp; 
IF(INCLUDES(Contact.Opted_Out__c ,"CrowdTorch"), "CrowdTorch;", "") &amp; 
IF(INCLUDES(Contact.Opted_Out__c ,"CrowdCompass"), "CrowdCompass;", "") &amp; 
IF(INCLUDES(Contact.Opted_Out__c ,"Org Opt-out"), "Org Opt-out;", "") &amp; 
IF(INCLUDES(Contact.Opted_Out__c ,"No Longer There"), "No Longer There;", "") &amp; 
IF(INCLUDES(Contact.Opted_Out__c ,"ReFlagged-No Longer There"), "ReFlagged-No Longer There;", ""))-1 )</formula>
        <label>Mktg: Exclude From Promos</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Unique_Org_Show__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monthly Unique Org Shows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Unique_Orgs_Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monthly Unique Orgs Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Named_Account__c</fullName>
        <formula>Contact.Named_Acct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Named Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership_Group__c</fullName>
        <formula>Contact.Account.Ownership_Group_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ownership Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Members1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Contact.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>CrowdTorch</fullName>
                </value>
                <value>
                    <fullName>CSN</fullName>
                </value>
                <value>
                    <fullName>eMarketing</fullName>
                </value>
                <value>
                    <fullName>EMI</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Inquisium</fullName>
                </value>
                <value>
                    <fullName>SignUp4</fullName>
                </value>
                <value>
                    <fullName>SpeedRFP</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>TicketMob</fullName>
                </value>
                <value>
                    <fullName>Venue Sourcing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Open_Date__c</fullName>
        <label>Registration Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDC_Member_Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Member Created Date&amp;Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sleep_Rooms__c</fullName>
        <formula>Text(Contact.Account.Sleep_Rooms__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sleep Rooms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Sales_Reps__c</fullName>
        <label>Survey Rep</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>CSN</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>TPP</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>CrowdTorch</fullName>
                </value>
                <value>
                    <fullName>TicketMob</fullName>
                </value>
                <value>
                    <fullName>Event-AM</fullName>
                </value>
                <value>
                    <fullName>Survey-AM</fullName>
                </value>
                <value>
                    <fullName>CSN-AM</fullName>
                </value>
                <value>
                    <fullName>Enterprise-AM</fullName>
                </value>
                <value>
                    <fullName>TPP-AM</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass-AM</fullName>
                </value>
                <value>
                    <fullName>CrowdTorch-AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Contact.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Meeting_Space__c</fullName>
        <formula>Text(Contact.Account.Total_Meeting_Space__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Meeting Space</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_RFP_s_Received__c</fullName>
        <formula>Contact.Account.ofTotalRFPsReceived__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total RFP's Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Venue_Type__c</fullName>
        <formula>Text(Contact.Account.Venue_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue Type</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>